--- a/_02-09_adhd_child.qmd
+++ b/_02-09_adhd_child.qmd
@@ -1,193 +1,115 @@
-## ADHD Symptoms and Executive Functioning {#sec-adhd}
+## ADHD/Executive Function {#sec-adhd}
+#TODO:
+{{< include _02-09_adhd_child_text.qmd >}}
 
 ```{r}
 #| label: setup-adhd
 #| include: false
 
-# Suppress warnings from being converted to errors
-options(warn = 1) # Set warn to 1 to make warnings not halt execution
-
 # domain
 domains <- c("ADHD")
-
-# target phenotype
+# phenotype
 pheno <- "adhd"
 ```
 
 ```{r}
 #| label: export-adhd
 #| include: false
-#| eval: true
-
-# Read the CSV file into a data frame
-adhd <- vroom::vroom("neurobehav.csv")
-
-# Filter the data frame based on certain conditions
-# Keep only the rows where 'domain' equals 'domains' and 'z_mean_domain' is not NA
-adhd <- adhd |>
-  dplyr::filter(domain %in% domains)
-
-# Select specific columns from the data frame
-adhd <- adhd |>
+#| eval: false
+adhd <- readr::read_csv("neurobehav.csv") |>
+  dplyr::filter(domain == domains) |>
+  dplyr::filter(!is.na(z_mean_domain)) |>
   dplyr::select(
-    test,
-    test_name,
-    scale,
-    raw_score,
-    score,
-    ci_95,
-    percentile,
-    range,
-    domain,
-    subdomain,
-    narrow,
-    pass,
-    verbal,
-    timed,
-    description,
-    result,
-    z,
-    z_mean_domain,
-    z_sd_domain,
-    z_mean_subdomain,
-    z_sd_subdomain,
-    z_mean_narrow,
-    z_sd_narrow
+    scale, score, z, percentile, range, test_name,
+    domain, subdomain, narrow, result,
+    z_mean_domain, z_sd_domain, z_mean_subdomain,
+    z_sd_subdomain, z_mean_narrow, z_sd_narrow
   )
+readr::write_csv(adhd, paste0(pheno, ".csv"))
+```
 
-# Write the 'adhd' data frame to a CSV file
-# The file name is derived from the 'pheno' variable
-readr::write_excel_csv(adhd, paste0(pheno, ".csv"), na = "", col_names = TRUE, append = FALSE)
+```{r}
+#| label: read-data-scales
+#| eval: false
+#| include: false
+
+df <- readr::read_csv("read_data_scales.csv")
+domains <- df$domains
+string_representation <- df$scales
+
+# Extract the inner part of the string to get the content inside c(...)
+inner_string <- gsub("^.+\"c\\((.*)\\)\"$", "\\1", string_representation)
+
+# Use eval and parse to convert the string into an actual R object
+scales <- eval(parse(text = paste("c(", inner_string, ")", sep = "")))
+
+data <- bwu::read_data(pheno = pheno)
+
+data_adhd <-
+  bwu::filter_data(data,
+    domain = domains,
+    scale = scales
+  )
 ```
 
 ```{r}
 #| label: data-adhd
 #| include: false
 
-# read and filter data
-data <- adhd
-
-# scales in this domain
+data <- bwu::read_data(pheno = "adhd")
 scales <- c(
-  "Activation",
-  "Focus",
-  "Effort",
-  "Emotion",
-  "Memory",
-  "Action",
-  "Total Composite",
-  "Inattention/Memory Problems",
-  "Hyperactivity/Restlessness",
-  "Impulsivity/Emotional Lability",
-  "Problems with Self-Concept",
-  "DSM-5 Inattentive Symptoms",
-  "DSM-5 Hyperactive-Impulsive Symptoms",
-  "DSM-5 ADHD Symptoms Total",
-  "ADHD Index",
-  "Full Scale",
-  "Attention",
-  "Emotion Regulation",
-  "Flexibility",
-  "Inhibitory Control",
-  "Initiation",
-  "Organization",
-  "Planning",
-  "Self-Monitoring",
-  "Working Memory",
-  "CEFI-SR Full Scale",
-  "CEFI-SR Attention",
-  "CEFI-SR Emotion Regulation",
-  "CEFI-SR Flexibility",
-  "CEFI-SR Inhibitory Control",
-  "CEFI-SR Initiation",
-  "CEFI-SR Organization",
-  "CEFI-SR Planning",
-  "CEFI-SR Self-Monitoring",
-  "CEFI-SR Working Memory",
-  "CEFI-OR Full Scale",
-  "CEFI-OR Attention",
-  "CEFI-OR Emotion Regulation",
-  "CEFI-OR Flexibility",
-  "CEFI-OR Inhibitory Control",
-  "CEFI-OR Initiation",
-  "CEFI-OR Organization",
-  "CEFI-OR Planning",
-  "CEFI-OR Self-Monitoring",
-  "CEFI-OR Working Memory",
-  # Conners 4
-  "Conners 4 Parent Inattention/Executive Dysfunction",
-  "Conners 4 Parent Hyperactivity",
-  "Conners 4 Parent Impulsivity",
-  "Conners 4 Parent Emotional Dysregulation",
-  "Conners 4 Parent Negative Self-Concept",
-  "Conners 4 Parent ADHD Inattentive Symptoms",
-  "Conners 4 Parent ADHD Hyperactive/Impulsive Symptoms",
-  "Conners 4 Parent Total ADHD Symptoms",
-  "Conners 4 Parent ADHD Index",
-  "Conners 4 Self Inattention/Executive Dysfunction",
-  "Conners 4 Self Hyperactivity",
-  "Conners 4 Self Impulsivity",
-  "Conners 4 Self Emotional Dysregulation",
-  "Conners 4 Self Negative Self-Concept",
-  "Conners 4 Self ADHD Inattentive Symptoms",
-  "Conners 4 Self ADHD Hyperactive/Impulsive Symptoms",
-  "Conners 4 Self Total ADHD Symptoms",
-  "Conners 4 Self ADHD Index",
-  "Inattention/Executive Dysfunction",
-  "Hyperactivity",
-  "Impulsivity",
-  "Emotional Dysregulation",
-  "Depressed Mood",
-  "Anxious Thoughts",
-  "Schoolwork",
-  "Peer Interactions",
-  "Family Life",
-  "ADHD Inattentive Symptoms",
-  "ADHD Hyperactive/Impulsive Symptoms",
-  "Total ADHD Symptoms",
-  "Oppositional Defiant Disorder Symptoms",
-  "Conduct Disorder Symptoms",
-  "ADHD Index"
+  "Activation", "Focus", "Effort", "Emotion", "Memory", "Action", "Total Composite", "CAARS-SR Inattention/Memory Problems", "CAARS-SR Hyperactivity/Restlessness", "CAARS-SR Impulsivity/Emotional Lability", "CAARS-SR Problems with Self-Concept", "CAARS-SR DSM-5 Inattentive Symptoms", "CAARS-SR DSM-5 Hyperactive-Impulsive Symptoms", "CAARS-SR DSM-5 ADHD Symptoms Total", "CAARS-SR ADHD Index", "CEFI-SR Full Scale", "CEFI-SR Attention", "CEFI-SR Emotion Regulation", "CEFI-SR Flexibility", "CEFI-SR Inhibitory Control", "CEFI-SR Initiation", "CEFI-SR Organization", "CEFI-SR Planning", "CEFI-SR Self-Monitoring", "CEFI-SR Working Memory", "CAARS-OR Inattention/Memory Problems", "CAARS-OR Hyperactivity/Restlessness", "CAARS-OR Impulsivity/Emotional Lability", "CAARS-OR Problems with Self-Concept", "CAARS-OR DSM-5 Inattentive Symptoms", "CAARS-OR DSM-5 Hyperactive-Impulsive Symptoms", "CAARS-OR DSM-5 ADHD Symptoms Total", "CAARS-OR ADHD Index", "CEFI-OR Full Scale", "CEFI-OR Attention", "CEFI-OR Emotion Regulation", "CEFI-OR Flexibility", "CEFI-OR Inhibitory Control", "CEFI-OR Initiation", "CEFI-OR Organization", "CEFI-OR Planning", "CEFI-OR Self-Monitoring", "CEFI-OR Working Memory"
 )
-
-# Filter the data using the filter_data function from the bwu library
-# The domain is specified by the 'domains' variable
-# The scale is specified by the 'scales' variable
 data_adhd <- bwu::filter_data(data, domain = domains, scale = scales)
 ```
+
 
 ```{r}
 #| label: text-adhd-self
 #| cache: true
-#| eval: true
+#| eval: false
 #| include: false
 
 # Self-report
-data_adhd_self <-
+data_sr <-
   data_adhd |>
-  dplyr::filter(test == "conners4_self" | test == "cefi_sr" | test == "brown_efa_self") |>
+  dplyr::filter(test == "cefi_sr" | test == "caars_sr") |>
+  dplyr::arrange(dplyr::desc(percentile)) |>
+  dplyr::distinct(.keep_all = FALSE)
+# Flatten the text
+bwu::cat_neuropsych_results(data = data_sr, file = "_02-09_adhd_text.qmd")
+```
+
+```{r}
+#| label: text-adhd-observer
+#| cache: true
+#| eval: false
+#| include: false
+
+# Observer reports
+data_or <-
+  data |>
+  dplyr::filter(test == "cefi_or" | test == "caars_or") |>
   dplyr::arrange(dplyr::desc(percentile)) |>
   dplyr::distinct(.keep_all = FALSE)
 
 # Flatten the text
-bwu::cat_neuropsych_results(data = data_adhd_self, file = "_02-09_adhd_child_text_self.qmd")
+bwu::cat_neuropsych_results(data = data_or, file = "_02-09_adhd_text.qmd")
 ```
 
 ```{r}
 #| label: text-adhd-parent
 #| cache: true
+#| eval: true
 #| include: false
-#| eval: false
 
-# Parent report
+# parent reports
 data_adhd_parent <-
   data_adhd |>
-  dplyr::filter(test == "conners4_parent" | test == "cefi_or" | test == "brown_efa_parent") |>
-  dplyr::arrange(dplyr::desc(percentile)) |>
-  dplyr::distinct(.keep_all = FALSE)
+  dplyr::filter(test == "cefi_or" | test == "caars_or" | test == "brown_efa_parent")
 
 # Flatten the text
-bwu::cat_neuropsych_results(data = data_adhd_parent, file = "_02-09_adhd_child_text_parent.qmd")
+bwu::cat_neuropsych_results(data = data_adhd_parent, file = "_02-09_adhd_text.qmd")
 ```
 
 ```{r}
@@ -195,82 +117,113 @@ bwu::cat_neuropsych_results(data = data_adhd_parent, file = "_02-09_adhd_child_t
 #| cache: true
 #| eval: false
 #| include: false
-
-# Parent report
-data_adhd_teacher <-
-  data_adhd |>
-  dplyr::filter(test == "conners4_teacher" | test == "cefi_or" | test == "brown_efa_teacher") |>
+TODO:
+# Observer reports
+data_or <-
+  data |>
+  dplyr::filter(test == "cefi_or" | test == "caars_or" | test == "brown_efa_parent") |>
   dplyr::arrange(dplyr::desc(percentile)) |>
   dplyr::distinct(.keep_all = FALSE)
 
 # Flatten the text
-bwu::cat_neuropsych_results(data = data_adhd_teacher, file = "_02-09_adhd_child_text_teacher.qmd")
+bwu::cat_neuropsych_results(data = data_or, file = "_02-09_adhd_text.qmd")
 ```
 
 ```{r}
-#| label: qtbl-adhd-self
+#| label: qtbl-adhd-sr
 #| dev: tikz
 #| fig-process: pdf2png
-#| eval: true
+#| eval: false
 #| include: false
 options(tikzDefaultEngine = "xetex")
 
-# table arguments
-table_name <- "table_adhd_self"
-vertical_padding <- 0
-multiline <- TRUE
-
-# footnotes
-fn_standard_score <- gt::md("CEFI Standard score: Mean = 100 [50th‰], SD ± 15
-[16th‰, 84th‰].
-
-Lower scores reflect reduced functioning.")
-
-fn_t_score <- gt::md("T-score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰].
-
-Higher scores reflect reduced functioning.")
-
-# groupings
 grp_adhd <- list(
   standard_score = c("CEFI Self-Report", "CEFI Observer-Report"),
-  t_score = c("Conners 4 Self", "Conners 4 Parent", "Conners 4 Teacher")
+  t_score = c("CAARS Self-Report", "CAARS Observer-Report")
 )
-grp_conners4 <- list(
-  t_score = c("Conners 4 Self", "Conners 4 Parent", "Conners 4 Teacher")
+grp_caars <- list(
+  t_score = c("CAARS Self-Report", "CAARS Observer-Report")
 )
 grp_cefi <- list(
   standard_score = c("CEFI Self-Report", "CEFI Observer-Report")
 )
+# footnotes
+fn_standard_score <- gt::md("CEFI Standard Score: Mean = 100 [50th‰], SD ± 15
+[16th‰, 84th‰].
 
-grp_self <- list(
-    standard_score = c("CEFI Self-Report"),
-    t_score = c("Conners 4 Self", "Brown EF/A Self")
-  )
+Lower scores reflect reduced functioning.")
+fn_t_score <- gt::md("CAARS *T*-Score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰].
 
-# Clean scale names
-data_adhd_self <-
-  dplyr::mutate(data_adhd_self,
-    scale = stringr::str_remove_all(
-      scale, "Conners 4 Self |CEFI Self-Report |Brown EF/A Self-Report"
-    )
-  )
+Higher scores reflect reduced functioning.")
 
-# redo this bc got sorted by pct
-data_adhd_self <-
-  data_adhd |>
-  dplyr::filter(test == "conners4_self" | test == "cefi_sr" | test == "brown_efa_self") |>
-  dplyr::distinct(.keep_all = FALSE)
+# variables
+data <- data_sr
+pheno <- "self_report"
+table_name <- "table_self"
+vertical_padding <- 0
+multiline <- TRUE
+fn_standard_score <- fn_standard_score
+fn_t_score <- fn_t_score
+grp_sr <- list(
+  standard_score = c("CEFI Self-Report"),
+  t_score = c("CAARS Self-Report")
+)
 
-# make `gt` table
+# Self-Report
 bwu::tbl_gt(
-  data = data_adhd_self,
+  data = data,
   pheno = pheno,
   table_name = table_name,
   fn_standard_score = fn_standard_score,
   fn_t_score = fn_t_score,
-  grp_standard_score = grp_self[["standard_score"]],
-  grp_t_score = grp_self[["t_score"]],
-  dynamic_grp = grp_self,
+  grp_standard_score = grp_sr[["standard_score"]],
+  grp_t_score = grp_sr[["t_score"]],
+  dynamic_grp = grp_sr,
+  vertical_padding = vertical_padding,
+  multiline = multiline
+)
+```
+
+```{r}
+#| label: qtbl-adhd-or
+#| dev: tikz
+#| fig-process: pdf2png
+#| eval: false
+#| include: false
+options(tikzDefaultEngine = "xetex")
+
+# footnotes
+fn_standard_score <- gt::md("CEFI Standard Score: Mean = 100 [50th‰], SD ± 15
+[16th‰, 84th‰].
+
+Lower scores reflect reduced functioning.")
+fn_t_score <- gt::md("CAARS *T*-Score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰].
+
+Higher scores reflect reduced functioning.")
+
+# Observer-Report
+data <- data_or
+pheno <- "observer_report"
+table_name <- "table_or"
+vertical_padding <- 0
+multiline <- TRUE
+fn_standard_score <- fn_standard_score
+fn_t_score <- fn_t_score
+grp_or <- list(
+  standard_score = c("CEFI Observer-Report"),
+  t_score = c("CAARS Observer-Report")
+)
+
+# Observer-Report
+bwu::tbl_gt(
+  data = data,
+  pheno = pheno,
+  table_name = table_name,
+  fn_standard_score = fn_standard_score,
+  fn_t_score = fn_t_score,
+  grp_standard_score = grp_or[["standard_score"]],
+  grp_t_score = grp_or[["t_score"]],
+  dynamic_grp = grp_or,
   vertical_padding = vertical_padding,
   multiline = multiline
 )
@@ -280,361 +233,191 @@ bwu::tbl_gt(
 #| label: qtbl-adhd-parent
 #| dev: tikz
 #| fig-process: pdf2png
-#| eval: false
+#| eval: true
 #| include: false
 options(tikzDefaultEngine = "xetex")
 
-# table arguments
+# footnotes
+source_note <- gt::md("Brown EF/A Scale *T* Scores: Mean = 50 [50th‰], SD ± 10
+[16th‰, 84th‰].
+
+High scores reflect difficulties in executive functioning.")
+
+# fn_t_score <- gt::md("Brown EF/A Scales: *T* Score: Mean = 50 [50th‰], SD ± 10
+# [16th‰, 84th‰]; higher scores reflect difficulties in executive functioning.")
+
+# parent report
+# data <- dplyr::arrange(data_or, absort)
+pheno <- "adhd_parent"
 table_name <- "table_adhd_parent"
+grp_adhd_parent <- list(t_score = c("Brown EF/A Parent Ratings"))
 vertical_padding <- 0
 multiline <- TRUE
 
-# footnotes
-fn_standard_score <- gt::md("CEFI Standard score: Mean = 100 [50th‰], SD ± 15
-[16th‰, 84th‰].
-
-Lower scores reflect reduced functioning.")
-
-fn_t_score <- gt::md("T-score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰].
-
-Higher scores reflect reduced functioning.")
-
-# groupings
-grp_adhd <- list(
-  standard_score = c("CEFI Self-Report", "CEFI Observer-Report"),
-  t_score = c("Conners 4 Self", "Conners 4 Parent", "Conners 4 Teacher")
-)
-grp_conners4 <- list(
-  t_score = c("Conners 4 Self", "Conners 4 Parent", "Conners 4 Teacher")
-)
-grp_cefi <- list(
-  standard_score = c("CEFI Self-Report", "CEFI Observer-Report")
-)
-
-# Clean scale names
-data_adhd_parent <-
-  dplyr::mutate(data_adhd_parent,
-    scale = stringr::str_remove_all(
-      scale, "Conners 4 Parent |CEFI Parent-Report |Brown EF/A Parent-Report"
-    )
-  )
-
-grp_parent <- list(
-  standard_score = c("CEFI Parent-Report"),
-  t_score = c("Conners 4 Parent", "Brown EF/A Parent")
-)
-
-# redo this bc got sorted by pct
-data_adhd_parent <-
-  data_adhd |>
-  dplyr::filter(test == "conners4_parent" | test == "cefi_or" | test == "brown_efa_parent") |>
-  dplyr::distinct(.keep_all = FALSE)
-
-# make `gt` table
 bwu::tbl_gt(
   data = data_adhd_parent,
   pheno = pheno,
   table_name = table_name,
-  fn_standard_score = fn_standard_score,
-  fn_t_score = fn_t_score,
-  grp_standard_score = grp_parent[["standard_score"]],
-  grp_t_score = grp_parent[["t_score"]],
-  dynamic_grp = grp_parent,
+  source_note = source_note,
+  # fn_t_score = fn_t_score,
+  grp_t_score = grp_adhd_parent[["t_score"]],
+  dynamic_grp = grp_adhd_parent,
   vertical_padding = vertical_padding,
   multiline = multiline
 )
 ```
 
+
 ```{r}
-#| label: qtbl-adhd-teacher
-#| dev: tikz
-#| fig-process: pdf2png
+#| label: fig-caars
 #| eval: false
 #| include: false
-options(tikzDefaultEngine = "xetex")
-
-# table arguments
-table_name <- "table_adhd_teacher"
-vertical_padding <- 0
-multiline <- TRUE
-
-# footnotes
-fn_standard_score <- gt::md("CEFI Standard score: Mean = 100 [50th‰], SD ± 15
-[16th‰, 84th‰].
-
-Lower scores reflect reduced functioning.")
-
-fn_t_score <- gt::md("T-score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰].
-
-Higher scores reflect reduced functioning.")
-
-# groupings
-grp_adhd <- list(
-  standard_score = c("CEFI Self-Report", "CEFI Observer-Report"),
-  t_score = c("Conners 4 Self", "Conners 4 Parent", "Conners 4 Teacher")
-)
-grp_cefi <- list(
-  standard_score = c("CEFI Self-Report", "CEFI Observer-Report")
-)
-grp_conners4 <- list(
-  t_score = c("Conners 4 Self", "Conners 4 Parent", "Conners 4 Teacher")
-)
-
-# Clean scale names
-data_adhd_teacher <-
-  dplyr::mutate(data_adhd_teacher,
-    scale = stringr::str_remove_all(
-      scale, "Conners 4 Teacher |CEFI Teacher-Report |Brown EF/A Teacher-Report"
-    )
-  )
-
-grp_teacher <- list(
-  standard_score = c("CEFI Teacher-Report"),
-  t_score = c("Conners 4 Teacher", "Brown EF/A Teacher")
-)
-
-# redo this bc got sorted by pct
-data_adhd_teacher <-
-  data_adhd |>
-  dplyr::filter(test == "conners4_teacher" | test == "cefi_tr" | test == "brown_efa_teacher") |>
-  dplyr::distinct(.keep_all = FALSE)
-
-# make `gt` table
-bwu::tbl_gt(
-  data = data_adhd_teacher,
-  pheno = pheno,
-  table_name = table_name,
-  fn_standard_score = fn_standard_score,
-  fn_t_score = fn_t_score,
-  grp_standard_score = grp_teacher[["standard_score"]],
-  grp_t_score = grp_teacher[["t_score"]],
-  dynamic_grp = grp_teacher,
-  vertical_padding = vertical_padding,
-  multiline = multiline
-)
-```
-
-```{r}
-#| label: fig-adhd-self
-#| eval: true
-#| include: false
-#| fig-height: 6
-#| out-height: 100%
 #| fig-cap: "Attention and executive functions are multidimensional concepts that contain several related processes. Both concepts require self-regulatory skills and have some common subprocesses; therefore, it is common to treat them together, or even to refer to both processes when talking about one or the other."
 
-# dotplot arguments
-filename <- "fig_adhd_self.svg"
+# data for caars dotplot
+pheno <- "caars"
+data_caars <- dplyr::filter(data, filename %in% c("caars_sr.csv", "caars_or.csv"))
 colors <- NULL
+# return_plot <- FALSE
 return_plot <- Sys.getenv("RETURN_PLOT")
+filename <- "fig_caars.svg"
+x <- data_caars$z_mean_subdomain
+y <- data_caars$subdomain
 
-# dotplot variables to plot (x, y)
-x <- data_adhd_self$z
-y <- data_adhd_self$scale
-
-# Suppress warnings from being converted to errors
-options(warn = 1) # Set warn to 1 to make warnings not halt execution
-
+# Make dotplot
 bwu::dotplot(
-  data = data_adhd_self,
+  data = data_caars,
   x = x,
   y = y,
   colors = colors,
   return_plot = return_plot,
-  filename = filename,
-  na.rm = TRUE
+  filename = filename
 )
+```
 
-# Reset warning options to default if needed
-options(warn = 0) # Reset to default behavior
+```{r}
+#| label: fig-cefi
+#| eval: false
+#| include: false
+#| fig-cap: "Attention and executive functions are multidimensional concepts that contain several related processes. Both concepts require self-regulatory skills and have some common subprocesses; therefore, it is common to treat them together, or even to refer to both processes when talking about one or the other."
+
+# data for cefi dotplot
+pheno <- "cefi"
+data_cefi <- dplyr::filter(data, filename %in% c("cefi_sr.csv", "cefi_or.csv"))
+colors <- NULL
+# return_plot <- TRUE
+return_plot <- Sys.getenv("RETURN_PLOT")
+filename <- "fig_cefi.svg"
+x <- data_cefi$z_mean_narrow
+y <- data_cefi$narrow
+
+# Make dotplot
+bwu::dotplot(
+  data = data_cefi,
+  x = x,
+  y = y,
+  colors = colors,
+  return_plot = return_plot,
+  filename = filename
+)
 ```
 
 ```{r}
 #| label: fig-adhd-parent
-#| eval: false
+#| eval: true
 #| include: false
-#| fig-height: 6
-#| out-height: 100%
 #| fig-cap: "Attention and executive functions are multidimensional concepts that contain several related processes. Both concepts require self-regulatory skills and have some common subprocesses; therefore, it is common to treat them together, or even to refer to both processes when talking about one or the other."
 
-# dotplot arguments
-filename <- "fig_adhd_parent.svg"
+# args
 colors <- NULL
+# return_plot <- TRUE
 return_plot <- Sys.getenv("RETURN_PLOT")
+filename <- "fig_adhd_parent.svg"
+x <- data_adhd_parent$z_mean_narrow
+y <- data_adhd_parent$narrow
 
-# dotplot variables to plot (x, y)
-x <- data_adhd_parent$z
-y <- data_adhd_parent$scale
-
-# Suppress warnings from being converted to errors
-options(warn = 1) # Set warn to 1 to make warnings not halt execution
-
+# Make dotplot
 bwu::dotplot(
   data = data_adhd_parent,
   x = x,
   y = y,
-  colors = colors,
+  colors = NULL,
   return_plot = return_plot,
-  filename = filename,
-  na.rm = TRUE
+  filename = filename
 )
-
-# Reset warning options to default if needed
-options(warn = 0) # Reset to default behavior
 ```
-
-```{r}
-#| label: fig-adhd-teacher
-#| eval: false
-#| include: false
-#| fig-height: 6
-#| out-height: 100%
-#| fig-cap: "Attention and executive functions are multidimensional concepts that contain several related processes. Both concepts require self-regulatory skills and have some common subprocesses; therefore, it is common to treat them together, or even to refer to both processes when talking about one or the other."
-
-# dotplot arguments
-filename <- "fig_adhd_teacher.svg"
-colors <- NULL
-return_plot <- Sys.getenv("RETURN_PLOT")
-
-# dotplot variables to plot (x, y)
-x <- data_adhd_teacher$z
-y <- data_adhd_teacher$scale
-
-# Suppress warnings from being converted to errors
-options(warn = 1) # Set warn to 1 to make warnings not halt execution
-
-bwu::dotplot(
-  data = data_adhd_teacher,
-  x = x,
-  y = y,
-  colors = colors,
-  return_plot = return_plot,
-  filename = filename,
-  na.rm = TRUE
-)
-
-# Reset warning options to default if needed
-options(warn = 0) # Reset to default behavior
-```
-
-### SELF-REPORT
-
-{{< include _02-09_adhd_child_text_self.qmd >}}
 
 ```{=typst}
 #let domain(title: none, file_qtbl, file_fig) = {
-  let font = (font: "Roboto Slab", size: 0.5em)
+  let font = (font: "Merriweather", size: 0.7em)
   set text(..font)
-  pad(top: 0.5em)[]
-  grid(
-    columns: (50%, 50%),
-    gutter: 8pt,
-    figure(
-      [#image(file_qtbl)],
-      caption: figure.caption(position: top, [#title]),
-      kind: "qtbl",
-      supplement: [*Table*],
-    ),
-    figure(
-      [#image(file_fig)],
-      caption: figure.caption(
-        position: bottom,
-        [
-        Attention and executive functions are multidimensional concepts that contain several related processes. Both concepts require self-regulatory skills and have some common subprocesses; therefore, it is common to treat them together, or even to refer to both processes when talking about one or the other.
-          ],
-      ),
-      placement: none,
-      kind: "image",
-      supplement: [*Fig.*],
-      gap: 0.5em,
-    ),
-  )
-}
+    grid(
+      columns: (50%, 50%),
+      rows: (50%, 50%),
+      gutter: 8pt,
+        figure([#image(file_qtbl)],
+          caption: figure.caption(position: top, [#title]),
+          kind: "qtbl",
+          supplement: [*Table*],
+          ),
+        figure([#image(file_fig)],
+          caption: figure.caption(position: bottom, [Adult ADHD symptom reports
+          collapsed/averaged together across raters and subdomains of ADHD. The
+          above figures were generated based on the Conners’ Adult ADHD Rating Scales, Long
+          Version (CAARS–S:L), an instrument that is helpful when considering a
+          diagnosis of ADHD or related problems.]),
+          placement: none,
+          kind: "image",
+          supplement: [*Fig.*],
+          gap: 0.5em,
+        ),
+      )
+  }
 ```
+
 ```{=typst}
-#let title = "ADHD Self-Report Ratings"
+#let title = "Self-Report of ADHD and Executive Function"
 #let file_qtbl = "table_adhd_self.png"
 #let file_fig = "fig_adhd_self.svg"
-#domain(title: [#title], file_qtbl, file_fig)
+#domain(
+  title: [#title],
+  file_qtbl,
+  file_fig
+)
 ```
-
-### PARENT RATINGS
-
-{{< include _02-09_adhd_child_text_parent.qmd >}}
 
 ```{=typst}
 #let domain(title: none, file_qtbl, file_fig) = {
-  let font = (font: "Roboto Slab", size: 0.5em)
+  let font = (font: "Merriweather", size: 0.7em)
   set text(..font)
-  pad(top: 0.5em)[]
-  grid(
-    columns: (50%, 50%),
-    gutter: 8pt,
-    figure(
-      [#image(file_qtbl)],
-      caption: figure.caption(position: top, [#title]),
-      kind: "qtbl",
-      supplement: [Table],
-    ),
-    figure(
-      [#image(file_fig)],
-      caption: figure.caption(
-        position: bottom,
-        [
-          Parent-report of the child's ADHD symptoms and executive functioning in daily life.
-        ],
-      ),
-      placement: none,
-      kind: "image",
-      supplement: [Figure],
-      gap: 0.5em,
-    ),
-  )
-}
-```
-```{=typst}
-#let title = "ADHD Parent Ratings"
-#let file_qtbl = "table_adhd_parent.png"
-#let file_fig = "fig_adhd_parent.svg"
-#domain(title: [#title], file_qtbl, file_fig)
+    grid(
+      columns: (50%, 50%),
+      gutter: 8pt,
+        figure([#image(file_qtbl)],
+          caption: figure.caption(position: top, [#title]),
+          kind: "qtbl",
+          supplement: [Table],
+          ),
+        figure([#image(file_fig)],
+          caption: figure.caption(position: bottom, [
+            Attention and executive functions are multidimensional concepts that contain several related processes. Both concepts require self-regulatory skills and have some common subprocesses; therefore, it is common to treat them together, or even to refer to both processes when talking about one or the other.
+            ]),
+          placement: none,
+          kind: "image",
+          supplement: [Figure],
+          gap: 0.5em,
+        ),
+      )
+  }
 ```
 
-### TEACHER RATINGS
-
-{{< include _02-09_adhd_child_text_teacher.qmd >}}
-
 ```{=typst}
-#let domain(title: none, file_qtbl, file_fig) = {
-  let font = (font: "Roboto Slab", size: 0.5em)
-  set text(..font)
-  pad(top: 0.5em)[]
-  grid(
-    columns: (50%, 50%),
-    gutter: 8pt,
-    figure(
-      [#image(file_qtbl)],
-      caption: figure.caption(position: top, [#title]),
-      kind: "qtbl",
-      supplement: [Table],
-    ),
-    figure(
-      [#image(file_fig)],
-      caption: figure.caption(
-        position: bottom,
-        [
-          Teacher-report of the child's ADHD symptoms and executive functioning in daily life.
-        ],
-      ),
-      placement: none,
-      kind: "image",
-      supplement: [Figure],
-      gap: 0.5em,
-    ),
-  )
-}
-```
-```{=typst}
-#let title = "ADHD Teacher Ratings"
-#let file_qtbl = "table_adhd_teacher.png"
-#let file_fig = "fig_adhd_teacher.svg"
-#domain(title: [#title], file_qtbl, file_fig)
+#let title = "Observer Ratings of ADHD and Executive Function"
+#let file_qtbl = "table_adhd_observer.png"
+#let file_fig = "fig_adhd_observer.svg"
+#domain(
+  title: [#title],
+  file_qtbl,
+  file_fig
+)
 ```
