--- a/src/rmd/pluck_caars2.Rmd
+++ b/src/rmd/pluck_caars2.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Pluck Tables from CAARS-2"
+title: "Pluck Tables from CAARS2-2"
 params:
   patient: Biggie
   test:
-    label: "CAARS-2:"
-    value: caars2_or
+    label: "CAARS 2:"
+    value: [caars2_sr]
     input: select
     multiple: no
     choices:
@@ -12,12 +12,10 @@ params:
       - caars2_or
   test_name:
     label: "Test Name:"
-    value: CAARS2 Observer
+    value: [CAARS-2 Self-Report]
     input: select
     multiple: no
     choices:
-      - CAARS2 Self
-      - CAARS2 Observer
       - CAARS-2 Self-Report
       - CAARS-2 Observer-Report
   file:
@@ -29,6 +27,8 @@ output:
   rmdformats::robobook:
     highlight: kate
 ---
+
+# CAARS2 Long Version SR/OR
 
 ## Load libraries
 
@@ -46,33 +46,61 @@ knitr::opts_chunk$set(
 )
 library(hablar)
 library(here)
-library(knitr)
 library(magrittr)
+library(readr)
 library(rJava)
 library(rmarkdown)
 library(rmdformats)
 library(shiny)
-library(snakecase)
-library(tabulapdf)
-library(tidyverse)
+library(tabulizer)
+library(tibble)
+library(tidyr)
+library(dplyr)
 library(bwu)
 ```
 
-## Parameters
+## Patient
 
-```{r}
-patient <- (params$patient)
-test <- params$test
-test_name <- params$test_name
-pages <- params$pages
-# file <- file.path(file.choose())
-file <- file.path(params$file)
-saveRDS(file, paste0(test, ".rds"))
-# file <- readRDS("caars2_sr.rds")
-# file <- readRDS("caars2_or.rds")
+```{r patient}
+patient <- params$patient
 ```
 
-## Areas
+## Test
+
+```{r test}
+test <- params$test
+```
+
+## Test Name
+
+```{r testname}
+test_name <- params$test_name
+```
+
+## Upload/attach PDF
+
+```{r file}
+# file <- file.choose()
+file <- file.path(params$file)
+```
+
+## Pages
+
+```{r pages}
+pages <- params$pages
+```
+
+```{r write-file}
+writeLines(
+  file, here::here("pre_csv", paste0(test, ".pdf"))
+)
+```
+
+```{r read-file}
+# test <- readLines(here::here(patient, "pre_csv", paste0(test, ".pdf")))
+```
+
+## Locate areas
 
 ```{r area-known}
 if (params$test == "caars2_sr") {
@@ -89,11 +117,36 @@ if (params$test == "caars2_or") {
     c(572, 35, 623, 576)
   )
 }
+
+# SR
+# java -jar tabula-java.jar  -a 120.488,35.0,252.068,576.62 -p 4 "$1" 
+# java -jar tabula-java.jar  -a 318.623,34.043,419.603,575.663 -p 4 "$1" 
+# java -jar tabula-java.jar  -a 571.838,34.043,616.973,576.428 -p 4 "$1" 
+
+# OR
+# java -jar tabula-java.jar  -a 119.723,35.0,252.068,576.62 -p 4 "$1" 
+# java -jar tabula-java.jar  -a 319.388,35.573,418.838,574.898 -p 4 "$1" 
+# java -jar tabula-java.jar  -a 571.838,34.808,623.093,576.428 -p 4 "$1" 
 ```
 
-## Extract tables
+```{r area-unknown, eval=FALSE}
+# area <- bwu::gpluck_locate_areas(
+#   file = file,
+#   pages = pages
+# )
+```
 
-```{r}
+```{r save-area}
+saveRDS(area, here::here("pre_csv", paste0(test, "_area.rds")))
+```
+
+```{r read-area}
+# area <- readRDS(here::here(patient, "pre_csv", paste0(test, "_area.rds")))
+```
+
+## Extract table
+
+```{r extract}
 plucked_tables <- bwu::gpluck_extract_tables(
   file = file,
   pages = pages,
@@ -102,44 +155,20 @@ plucked_tables <- bwu::gpluck_extract_tables(
   method = "stream",
   output = "matrix"
 )
-
-# Save the entire list to an R data file
-save(plucked_tables, file = paste0("plucked_tables_", test, ".RData"))
-
-# Load the entire list from an R data file
-load(file = paste0("plucked_tables_", test, ".RData"))
 ```
 
-### Function process_caars2_tables
+# Tidy Tables
 
-```{r}
-library(dplyr)
-library(purrr)
+## Pluck individual data/columns
 
-process_caars2_tables <- function(caars2_data) {
-  table_list <- purrr::map(caars2_data, as_tibble) %>%
-    set_names(paste0("table", 1:length(caars2_data))) # Rename tables
+### df1
 
-  list2env(table_list, .GlobalEnv) # Assign to global environment
-}
-
-# Example Usage:
-process_caars2_tables(plucked_tables)
-
-# Loop over the list and write each matrix to a CSV file
-for (i in seq_along(plucked_tables)) {
-  write.csv(plucked_tables[[i]], file = paste0(test, "_", i, ".csv"), row.names = FALSE)
-}
-```
-
-## Table 1
-
-```{r}
+```{r pluck1}
 library(dplyr)
 library(tidyr)
 
 # Convert matrix to data frame and set proper column names
-df1 <- tibble::as_tibble(plucked_tables[[1]])
+df1 <- as.data.frame(plucked_tables[[1]])
 colnames(df1) <- c("scale", "raw_score", "score", "ci_95", "percentile", "guideline", "elevated_items")
 
 # Merge rows 1 and 3 by updating the first row and removing the third row
@@ -155,11 +184,14 @@ row.names(df1) <- NULL
 df1
 ```
 
-## Table 2
+### df2
 
-```{r}
+```{r pluck2}
+library(dplyr)
+library(tidyr)
+
 # Convert matrix to data frame and set proper column names
-df2 <- tibble::as_tibble(plucked_tables[[2]])
+df2 <- as.data.frame(plucked_tables[[2]])
 colnames(df2) <- c("scale", "raw_score", "score", "ci_95", "percentile", "guideline", "symptom_count")
 
 # Merge rows 2 and 4 by updating the second row and removing the fourth row
@@ -175,12 +207,15 @@ row.names(df2) <- NULL
 df2
 ```
 
-## Table 3
+### df3
 
 ```{r pluck3}
+library(dplyr)
+library(tidyr)
+
 # Convert matrix to data frame and set proper column names
-df3 <- tibble::as_tibble(plucked_tables[[3]])
-colnames(df3) <- c("scale", "raw_score", "probability_score", "guideline")
+df3 <- as.data.frame(plucked_tables[[3]])
+colnames(df3) <- c("scale", "raw_score", "percentile", "guideline")
 
 # Remove row 1
 df3 <- df3[-2, ]
@@ -193,7 +228,7 @@ row.names(df3) <- NULL
 df3
 ```
 
-## Transform
+### transform data
 
 ```{r}
 library(dplyr)
@@ -202,11 +237,11 @@ library(stringr)
 # More robust function to remove ordinal suffixes and convert to numeric
 remove_ordinal_suffix <- function(x) {
   # Attempt to extract numeric-only part of the string
-  cleaned <- str_extract(str_trim(x), "\\d+")
+  cleaned = str_extract(str_trim(x), "\\d+")
   if (is.na(cleaned) || cleaned == "") {
-    NA # Return NA if no digits found
+    NA  # Return NA if no digits found
   } else {
-    as.numeric(cleaned) # Convert the cleaned string to numeric
+    as.numeric(cleaned)  # Convert the cleaned string to numeric
   }
 }
 
@@ -240,46 +275,98 @@ transform_data <- function(df) {
 
 # Example usage (assuming df1, df2, df3 are defined as earlier):
 df1_transformed <- transform_data(df1)
+
 df2_transformed <- transform_data(df2)
+
 df3_transformed <- transform_data(df3)
+
+```
+
+```{r bind}
 combined_df <- dplyr::bind_rows(df1_transformed, df2_transformed, df3_transformed)
 ```
 
-## Scales
+### row names
 
-```{r}
-combined_df[1, 1] <- c("Inattention/Executive Dysfunction")
-combined_df[2, 1] <- c("Hyperactivity")
-combined_df[3, 1] <- c("Impulsivity")
-combined_df[4, 1] <- c("Emotional Dysregulation")
-combined_df[5, 1] <- c("Negative Self-Concept")
-combined_df[6, 1] <- c("ADHD Inattentive Symptoms")
-combined_df[7, 1] <- c("ADHD Hyperactive/Impulsive Symptoms")
-combined_df[8, 1] <- c("Total ADHD Symptoms")
-combined_df[9, 1] <- c("CAARS 2-ADHD Index")
-combined_df <- combined_df[1:9, ]
+```{r rownames}
+if (params$test == "caars2_sr") {
+  combined_df[1, 1] <- c("CAARS2-SR Inattention/Executive Dysfunction")
+  combined_df[2, 1] <- c("CAARS2-SR Hyperactivity")
+  combined_df[3, 1] <- c("CAARS2-SR Impulsivity")
+  combined_df[4, 1] <- c("CAARS2-SR Emotional Dysregulation")
+  combined_df[5, 1] <- c("CAARS2-SR Negative Self-Concept")
+  combined_df[6, 1] <- c("CAARS2-SR ADHD Inattentive Symptoms")
+  combined_df[7, 1] <- c("CAARS2-SR ADHD Hyperactive/Impulsive Symptoms")
+  combined_df[8, 1] <- c("CAARS2-SR Total ADHD Symptoms")
+  combined_df[9, 1] <- c("CAARS2-SR ADHD Index")
+  combined_df <- combined_df[1:9, ]
+} else if (params$test == "caars2_or") {
+  combined_df[1, 1] <- c("CAARS2-OR Inattention/Executive Dysfunction")
+  combined_df[2, 1] <- c("CAARS2-OR Hyperactivity")
+  combined_df[3, 1] <- c("CAARS2-OR Impulsivity")
+  combined_df[4, 1] <- c("CAARS2-OR Emotional Dysregulation")
+  combined_df[5, 1] <- c("CAARS2-OR Negative Self-Concept")
+  combined_df[6, 1] <- c("CAARS2-OR ADHD Inattentive Symptoms")
+  combined_df[7, 1] <- c("CAARS2-OR ADHD Hyperactive/Impulsive Symptoms")
+  combined_df[8, 1] <- c("CAARS2-OR Total ADHD Symptoms")
+  combined_df[9, 1] <- c("CAARS2-OR ADHD Index")
+  combined_df <- combined_df[1:9, ]
+}
 ```
 
 ## Mutate columns
 
-```{r}
+```{r mutate}
 table <- combined_df
+
+# df_gemini <- readr::read_csv(here::here("data", "caars2_or.csv")) |> 
+#   dplyr::slice(-6) |> 
+#   dplyr::select(-c(`Guideline`, `# of Elevated Items`))
+# colnames(df_gemini) <- c("scale", "raw_score", "score", "ci_95", "percentile")
+
+# library(readr)
+# library(dplyr)
+# 
+# process_and_save_csv <- function(input_path, output_path) {
+#   # Read CSV file
+#   caars2_data <- read_csv(input_path)
+#   
+#   # Perform the required operations
+#   tidy_caars2_data <- caars2_data |> 
+#     # Remove row 7 "DSM Symptom Scales" (assuming it is the 7th row)
+#     slice(-6) |>  
+#     # Remove "Guideline" and "# of Elevated Items" columns
+#     select(-c(`Guideline`, `# of Elevated Items`))
+#   
+#   # Save the tidy'd caars2_or.csv file
+#   write_csv(tidy_caars2_data, output_path)
+# }
+# 
+# # Set the path for the input and output CSV files
+# # Adjust the paths if they are in different directories
+# input_path <- "data/caars2_or.csv"
+# output_path <- "data/tidy_caars2_or.csv"
+# 
+# # Call the function
+# caars2_or <- process_and_save_csv(input_path, output_path)
+# 
+# table <- caars2_or
 
 table <- bwu::gpluck_make_columns(
   table,
-  test = params$test,
-  test_name = params$test_name,
-  ci_95 = "",
   percentile = "",
   range = "",
+  ci_95 = "",
+  test = params$test,
+  test_name = params$test_name,
   domain = "ADHD",
   subdomain = "",
   narrow = "",
   pass = "",
   verbal = "",
   timed = "",
-  score_type = "t_score",
   test_type = "rating_scale",
+  score_type = "t_score",
   description = "",
   result = ""
 )
@@ -287,14 +374,14 @@ table <- bwu::gpluck_make_columns(
 
 ## Create percentile
 
-```{r, eval=FALSE}
-table <- table |>
+```{r percentile, eval=FALSE}
+table <- table |> 
   dplyr::mutate(z = (score - 50) / 10) |>
   dplyr::mutate(percentile = trunc(pnorm(z) * 100)) |>
   dplyr::select(-z)
 ```
 
-## Ranges
+## Test score ranges
 
 ```{r ranges}
 table <- bwu::gpluck_make_score_ranges(
@@ -317,7 +404,7 @@ if (length(subdomain_col) > 0) {
   table[6, subdomain_col] <- c("Inattention")
   table[7, subdomain_col] <- c("Hyperactivity/Impulsivity")
   table[8, subdomain_col] <- c("Combined Symptoms")
-  table[9, subdomain_col] <- c("Adult ADHD Index")
+  table[9, subdomain_col] <- c("ADHD Index")
 } else {
   warning("Column 'subdomain' not found in the table.")
 }
@@ -325,68 +412,155 @@ if (length(subdomain_col) > 0) {
 
 ## Narrow subdomains
 
-```{r}
-
-narrow_col <- which(colnames(table) == "narrow")
-
-if (length(narrow_col) > 0) {
-  table[1, narrow_col] <- c("Inattention")
-  table[2, narrow_col] <- c("Hyperactivity")
-  table[3, narrow_col] <- c("Impulsivity")
-  table[4, narrow_col] <- c("Impulsivity")
-  table[5, narrow_col] <- c("Self-Concept")
-  table[6, narrow_col] <- c("Inattention")
-  table[7, narrow_col] <- c("Hyperactivity")
-  table[8, narrow_col] <- c("Combined Symptoms")
-  table[9, narrow_col] <- c("CAARS2 ADHD Index")
-} else {
-  warning("Column 'narrow' not found in the table.")
-}
-
-# View the updated table
-print(table)
-```
-
-## Descriptions
-
-```{r}
-table <-
-  table |>
-  dplyr::mutate(
-    description = dplyr::case_when(
-      scale == "Inattention/Executive Dysfunction" ~ "i.e., trouble concentrating, difficulty planning or completing tasks, forgetfulness, absent-mindedness, being disorganized",
-      scale == "Hyperactivity" ~ "i.e., problems with working at the same task for long periods of time, feeling more restless than others seem to be, fidgeting",
-      scale == "Impulsivity" ~ "i.e., engaging in more impulsive acts than others do, low frustration tolerance, quick and frequent mood changes, feeling easily angered and irritated by people",
-      scale == "Emotional Dysregulation" ~ "i.e., has a hard time calming down, has trouble hiding their emotions",
-      scale == "Negative Self-Concept" ~ "i.e., poor social relationships, low self-esteem and self confidence",
-      scale == "ADHD Inattentive Symptoms" ~ "i.e., behave in a manner consistent with the DSM-5 Inattentive Presentation of ADHD",
-      scale == "ADHD Hyperactive/Impulsive Symptoms" ~ "i.e., behave in a manner consistent with the DSM-5 Hyperactive-Impulsive Presentation of ADHD",
-      scale == "Total ADHD Symptoms" ~ "i.e., behave in a manner consistent with the DSM-5 diagnostic criteria for Combined Presentation of ADHD",
-      scale == "CAARS 2-ADHD Index" ~ "i.e., a composite indicator for identifying individuals 'at-risk' for ADHD",
-      TRUE ~ as.character(description)
+```{r narrow}
+if (params$test == "caars2_sr") {
+  table <-
+    table |>
+    dplyr::mutate(
+      narrow = dplyr::case_when(
+        scale ==
+          "CAARS2-SR Inattention/Executive Dysfunction" ~ "Inattention Self-Report",
+        scale ==
+          "CAARS2-SR Hyperactivity" ~ "Hyperactivity Self-Report",
+        scale ==
+          "CAARS2-SR Impulsivity" ~ "Impulsivity Self-Report",
+        scale ==
+          "CAARS2-SR Emotional Dysregulation" ~ "Self-Concept Self-Report",
+        scale ==
+          "CAARS2-SR Negative Self-Concept" ~ "Self-Concept Self-Report",
+        scale ==
+          "CAARS2-SR ADHD Inattentive Symptoms" ~ "Inattention Self-Report",
+        scale ==
+          "CAARS2-SR ADHD Hyperactive/Impulsive Symptoms" ~ "Hyperactivity Self-Report",
+        scale ==
+          "CAARS2-SR Total ADHD Symptoms" ~ "Combined Symptoms Self-Report",
+        scale ==
+          "CAARS2-SR ADHD Index" ~ "ADHD Index Self-Report",
+        scale ==
+          "CAARS2-SR Inconsistency Index" ~ "Inconsistency Self-Report",
+        TRUE ~ as.character(narrow)
+      )
     )
-  )
-
-
+} else if (params$test == "caars2_or") {
+  table <-
+    table |>
+    dplyr::mutate(
+      narrow = dplyr::case_when(
+        scale ==
+          "CAARS2-OR Inattention/Executive Dysfunction" ~ "Inattention Observer-Report",
+        scale ==
+          "CAARS2-OR Hyperactivity" ~ "Hyperactivity Observer-Report",
+        scale ==
+          "CAARS2-OR Impulsivity" ~ "Impulsivity Observer-Report",
+        scale ==
+          "CAARS2-OR Negative Self-Concept" ~ "Self-Concept Observer-Report",
+        scale ==
+          "CAARS2-OR Emotional Dysregulation" ~ "Emotion/Mood Observer-Report",
+        scale ==
+          "CAARS2-OR ADHD Inattentive Symptoms" ~ "Inattention Observer-Report",
+        scale ==
+          "CAARS2-OR ADHD Hyperactive/Impulsive Symptoms" ~ "Hyperactivity Observer-Report",
+        scale ==
+          "CAARS2-OR Total ADHD Symptoms" ~ "Combined Symptoms Observer-Report",
+        scale ==
+          "CAARS2-OR ADHD Index" ~ "ADHD Index Observer-Report",
+        TRUE ~ as.character(narrow)
+      )
+    )
+}
 ```
 
-## Results
+## Scale descriptions
 
-```{r}
+```{r description}
+if (params$test == "caars2_sr") {
+  table <-
+    table |>
+    dplyr::mutate(
+      description = dplyr::case_when(
+        scale == "CAARS2-SR Inattention/Executive Dysfunction" ~
+          "i.e., trouble concentrating, difficulty planning or completing tasks, forgetfulness, absent-mindedness, being disorganized",
+        scale == "CAARS2-SR Hyperactivity" ~
+          "i.e., problems with working at the same task for long periods of time, feeling more restless than others seem to be, fidgeting",
+        scale == "CAARS2-SR Impulsivity" ~
+          "i.e., engaging in more impulsive acts than others do, low frustration tolerance, quick and frequent mood changes, feeling easily angered and irritated by people",
+        scale == "CAARS2-SR Emotional Dysregulation" ~
+          "i.e., poor social relationships, low self-esteem and self confidence",
+        scale == "CAARS2-SR Negative Self-Concept" ~
+          "i.e., poor social relationships, low self-esteem and self confidence",
+        scale == "CAARS2-SR ADHD Inattentive Symptoms" ~
+          "i.e., behave in a manner consistent with the DSM-5 Inattentive Presentation of ADHD",
+        scale == "CAARS2-SR ADHD Hyperactive/Impulsive Symptoms" ~
+          "i.e., behave in a manner consistent with the DSM-5 Hyperactive-Impulsive Presentation of ADHD",
+        scale == "CAARS2-SR Total ADHD Symptoms" ~
+          "i.e., behave in a manner consistent with the DSM-5 diagnostic criteria for Combined Presentation of ADHD",
+        scale == "CAARS2-SR ADHD Index" ~
+          "composite indicator for identifying individuals 'at-risk' for ADHD (self-reported)",
+        TRUE ~ as.character(description)
+      )
+    )
+} else if (params$test == "caars2_or") {
+  table <-
+    table |>
+    dplyr::mutate(
+      description = dplyr::case_when(
+        scale == "CAARS2-OR Inattention/Executive Dysfunction" ~ "i.e., trouble concentrating, difficulty planning or completing tasks, forgetfulness, absent-mindedness, being disorganized",
+        scale == "CAARS2-OR Hyperactivity" ~ "i.e., problems with working at the same task for long periods of time, feeling more restless than others seem to be, fidgeting",
+        scale == "CAARS2-OR Impulsivity" ~
+          "i.e., engaging in more impulsive acts than others do, low frustration tolerance, quick and frequent mood changes, feeling easily angered and irritated by people",
+        scale == "CAARS2-OR Emotional Dysregulation" ~
+          "i.e., poor regulation of emotions",
+        scale == "CAARS2-OR Negative Self-Concept" ~
+          "i.e., poor social relationships, low self-esteem and self confidence",
+        scale ==
+          "CAARS2-OR ADHD Inattentive Symptoms" ~
+          "i.e., behave in a manner consistent with the DSM-5 Inattentive Presentation of ADHD",
+        scale ==
+          "CAARS2-OR ADHD Hyperactive/Impulsive Symptoms" ~ "i.e., behave in a manner consistent with the DSM-5 Hyperactive-Impulsive Presentation of ADHD",
+        scale == "CAARS2-OR Total ADHD Symptoms" ~ "i.e., behave in a manner consistent with the DSM-5 diagnostic criteria for Combined Presentation of ADHD",
+        scale == "CAARS2-OR ADHD Index" ~ "composite indicator for identifying individuals 'at-risk' for ADHD (observer reported)",
+        TRUE ~ as.character(description)
+      )
+    )
+}
+```
+
+## Glue results
+
+```{r result}
 if (params$test == "caars2_sr") {
   table <-
     table |>
     dplyr::mutate(
       result = dplyr::case_when(
-        scale == "Inattention/Executive Dysfunction" ~ glue::glue("- Self-reported {scale} ({description}) was {range}.\n\n"),
-        scale == "Hyperactivity" ~ glue::glue("- Self-reported {scale} ({description}) was {range}.\n\n"),
-        scale == "Impulsivity" ~ glue::glue("- Self-reported {scale} ({description}) was {range}.\n\n"),
-        scale == "Emotional Dysregulation" ~ glue::glue("- Self-reported {scale} ({description}) was {range}.\n\n"),
-        scale == "Negative Self-Concept" ~ glue::glue("- Self-reported {scale} ({description}) was {range}.\n\n"),
-        scale == "ADHD Inattentive Symptoms" ~ glue::glue("- Self-reported {scale} ({description}) was {range}.\n\n"),
-        scale == "ADHD Hyperactive/Impulsive Symptoms" ~ glue::glue("- Self-reported {scale} ({description}) was {range}.\n\n"),
-        scale == "Total ADHD Symptoms" ~ glue::glue("- Self-reported {scale} ({description}) was {range}.\n\n"),
-        scale == "CAARS 2-ADHD Index" ~ glue::glue("- Self-reported {scale} ({description}) indicated a probability of {probability_score} of having adult ADHD.\n\n"),
+        scale == "CAARS2-SR Inattention/Executive Dysfunction" ~ glue::glue(
+          "- {scale} ({description}) was {range}.\n"
+        ),
+        scale == "CAARS2-SR Hyperactivity" ~ glue::glue(
+          "- {scale} ({description}) was {range}.\n"
+        ),
+        scale == "CAARS2-SR Impulsivity" ~ glue::glue(
+          "- {scale} ({description}) was {range}.\n"
+        ),
+        scale == "CAARS2-SR Emotional Dysregulation" ~ glue::glue(
+          "- {scale} ({description}) was {range}.\n"
+        ),
+        scale == "CAARS2-SR Negative Self-Concept" ~ glue::glue(
+          "- {scale} ({description}) was {range}.\n"
+        ),
+        scale == "CAARS2-SR ADHD Inattentive Symptoms" ~ glue::glue(
+          "- {scale} ({description}) was {range}.\n"
+        ),
+        scale == "CAARS2-SR ADHD Hyperactive/Impulsive Symptoms" ~ glue::glue(
+          "- {scale} ({description}) was {range}.\n"
+        ),
+        scale == "CAARS2-SR Total ADHD Symptoms" ~ glue::glue(
+          "- {scale} ({description}) was {range}.\n"
+        ),
+        scale == "CAARS2-SR ADHD Index" ~ glue::glue(
+          "- {patient}'s {description} was {range}.\n"
+        ),
+
         TRUE ~ as.character(result)
       )
     )
@@ -395,36 +569,62 @@ if (params$test == "caars2_sr") {
     table |>
     dplyr::mutate(
       result = dplyr::case_when(
-        scale == "Inattention/Executive Dysfunction" ~ glue::glue("- Observer-reported {scale} ({description}) was {range}.\n\n"),
-        scale == "Hyperactivity" ~ glue::glue("- Observer-reported {scale} ({description}) was {range}.\n\n"),
-        scale == "Impulsivity" ~ glue::glue("- Observer-reported {scale} ({description}) was {range}.\n\n"),
-        scale == "Emotional Dysregulation" ~ glue::glue("- Observer-reported {scale} ({description}) was {range}.\n\n"),
-        scale == "Negative Self-Concept" ~ glue::glue("- Observer-reported {scale} ({description}) was {range}.\n\n"),
-        scale == "ADHD Inattentive Symptoms" ~ glue::glue("- Observer-reported {scale} ({description}) was {range}.\n\n"),
-        scale == "ADHD Hyperactive/Impulsive Symptoms" ~ glue::glue("- Observer-reported {scale} ({description}) was {range}.\n\n"),
-        scale == "Total ADHD Symptoms" ~ glue::glue("- Observer-reported {scale} ({description}) was {range}.\n\n"),
-        scale == "CAARS 2-ADHD Index" ~ glue::glue("- Observer-reported {scale} ({description}) indicated a probability of {probability_score} of having adult ADHD.\n\n"),
+        scale == "CAARS2-OR Inattention/Executive Dysfunction" ~ glue::glue(
+          "- {scale} ({description}) was {range}.\n"
+        ),
+        scale == "CAARS2-OR Hyperactivity" ~ glue::glue(
+          "- {scale} ({description}) was {range}.\n"
+        ),
+        scale == "CAARS2-OR Impulsivity" ~ glue::glue(
+          "- {scale} ({description}) was {range}.\n"
+        ),
+        scale == "CAARS2-OR Emotional Dysregulation" ~ glue::glue(
+          "- {scale} ({description}) was {range}.\n"
+        ),
+        scale == "CAARS2-OR Negative Self-Concept" ~ glue::glue(
+          "- {scale} ({description}) was {range}.\n"
+        ),
+        scale == "CAARS2-OR ADHD Inattentive Symptoms" ~ glue::glue(
+          "- {scale} ({description}) was {range}.\n"
+        ),
+        scale == "CAARS2-OR ADHD Hyperactive/Impulsive Symptoms" ~ glue::glue(
+          "- {scale} ({description}) was {range}.\n"
+        ),
+        scale == "CAARS2-OR Total ADHD Symptoms" ~ glue::glue(
+          "- {scale} ({description}) was {range}.\n"
+        ),
+        scale == "CAARS2-OR ADHD Index" ~ glue::glue(
+          "- {patient}'s observer-rated {description} was {range}.\n"
+        ),
         TRUE ~ as.character(result)
       )
     )
 }
 ```
 
-## Save
+# Finalize and save
 
-```{r}
+## Relocate variables
+
+```{r relocate}
 table <-
   table |>
   dplyr::relocate(
-    c(raw_score, score, ci_95, percentile, range),
-    .after = scale
+    c(raw_score, score, percentile, range, ci_95),
+    .before = test
   )
+
 table <- table |> dplyr::select(-c(guideline, elevated_items, symptom_count))
-file_path <- here::here("data", "csv", paste0(params$test, ".csv"))
+```
+
+## Write out csv
+
+```{r write}
+file_path <- here::here("csv", paste0(params$test, ".csv"))
 readr::write_csv(table, file_path, col_names = TRUE, na = "")
 ```
 
-## Text Extract
+# Pluck Text
 
 ```{r text}
 # file <- fs::fs_path(params$file)
@@ -440,11 +640,10 @@ if (params$test == "caars2_sr") {
     stringr::str_split("\n") |>
     unlist()
   caars2_sr_txt
-
+  
   readr::write_lines(
-    caars2_sr_txt, here::here("caars2_sr_dirty.txt"),
-    sep = "\n"
-  )
+    caars2_sr_txt, here::here("caars2_sr_dirty.txt"), sep = "\n"
+    )
 
   # Replace long spaces with a col break symbol
 
@@ -455,6 +654,7 @@ if (params$test == "caars2_sr") {
 
   readr::write_lines(caars2_sr_squished, here::here("caars2_sr_text.md"), sep = "\n")
   readr::write_lines(caars2_sr_squished, here::here("caars2_sr_text.txt"), sep = "\n\n")
+  
 } else {
   ## extract text
   get_text <- function(file) {
@@ -466,11 +666,10 @@ if (params$test == "caars2_sr") {
     stringr::str_split("\n") |>
     unlist()
   caars2_or_txt
-
+  
   readr::write_lines(
-    caars2_or_txt, here::here("caars2_or_dirty.txt"),
-    sep = "\n"
-  )
+    caars2_or_txt, here::here("caars2_or_dirty.txt"), sep = "\n"
+    )
 
   # Replace long spaces with a col break symbol
   caars2_or_squished <-
