--- a/src/rmd/pluck_wais4.Rmd
+++ b/src/rmd/pluck_wais4.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Pluck Tables from WAIS-IV"
 params:
-  patient: "{{< var patient >}}"
+  patient: Biggie
   test:
     label: "Test"
     value: wais4
